<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/signage_background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:contentDescription="@string/brand_mark_content_description"
                android:src="@drawable/ic_brand_mark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/signage_gap"
                android:text="@string/brand_wordmark"
                style="@style/Text.Signage.SplashWordmark" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/signage_gap_large"
            android:contentDescription="@string/splash_loading_content_description"
            android:indeterminate="true"
            android:indeterminateTint="@color/signage_accent" />

    </LinearLayout>

</FrameLayout>
